fix(crear Lead): create lead button visible

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -891,6 +891,10 @@ video {
   height: 100vh;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .max-h-20 {
   max-height: 5rem;
 }
@@ -971,6 +975,10 @@ video {
   width: 100vw;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .max-w-40 {
   max-width: 10rem;
 }
@@ -985,6 +993,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.flex-auto {
+  flex: 1 1 auto;
 }
 
 .border-collapse {
